stop returning token associations and token balances data in queries as per HIP-367