@@ -35,7 +35,6 @@ import static com.hederahashgraph.api.proto.java.ResponseType.COST_ANSWER;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.BDDMockito.any;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
@@ -57,7 +56,6 @@ import com.hedera.node.app.service.mono.state.migration.AccountStorageAdapter;
 import com.hedera.node.app.service.mono.state.migration.TokenRelStorageAdapter;
 import com.hedera.node.app.service.mono.state.submerkle.EntityId;
 import com.hedera.node.app.service.mono.state.submerkle.FcTokenAllowanceId;
-import com.hedera.node.app.service.mono.state.submerkle.RawTokenRelationship;
 import com.hedera.node.app.service.mono.store.schedule.ScheduleStore;
 import com.hedera.node.app.service.mono.txns.validation.OptionValidator;
 import com.hedera.node.app.service.mono.utils.EntityNum;
@@ -76,7 +74,7 @@ import com.hederahashgraph.api.proto.java.TokenID;
 import com.hederahashgraph.api.proto.java.Transaction;
 import com.swirlds.common.utility.CommonUtils;
 import com.swirlds.merkle.map.MerkleMap;
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
 import java.util.TreeMap;
 import java.util.TreeSet;
@@ -213,7 +211,7 @@ class GetAccountInfoAnswerTest {
 
         view = new StateView(scheduleStore, children, networkInfo);
 
-        subject = new GetAccountInfoAnswer(optionValidator, aliasManager, dynamicProperties, rewardCalculator);
+        subject = new GetAccountInfoAnswer(optionValidator, aliasManager, rewardCalculator);
     }
 
     @Test
@@ -248,12 +246,11 @@ class GetAccountInfoAnswerTest {
 
     @Test
     void identifiesFailInvalid() throws Throwable {
-        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokensPerAccountInfo);
         final Query query = validQuery(ANSWER_ONLY, fee, target);
         // and:
         final StateView view = mock(StateView.class);
 
-        given(view.infoForAccount(any(), any(), anyInt(), any())).willReturn(Optional.empty());
+        given(view.infoForAccount(any(), any(), any())).willReturn(Optional.empty());
 
         // when:
         final Response response = subject.responseGiven(query, view, OK, fee);
@@ -332,20 +329,8 @@ class GetAccountInfoAnswerTest {
         assertEquals(12345678L, info.getStakingInfo().getStakePeriodStart().getSeconds());
         assertEquals(0L, info.getStakingInfo().getStakedToMe());
 
-        // and:
-        assertEquals(
-                List.of(
-                        new RawTokenRelationship(firstBalance, 0, 0, firstToken.getTokenNum(), true, true, true)
-                                .asGrpcFor(token),
-                        new RawTokenRelationship(secondBalance, 0, 0, secondToken.getTokenNum(), false, false, true)
-                                .asGrpcFor(token),
-                        new RawTokenRelationship(thirdBalance, 0, 0, thirdToken.getTokenNum(), true, true, false)
-                                .asGrpcFor(token),
-                        new RawTokenRelationship(fourthBalance, 0, 0, fourthToken.getTokenNum(), false, false, true)
-                                .asGrpcFor(deletedToken),
-                        new RawTokenRelationship(missingBalance, 0, 0, missingToken.getTokenNum(), false, false, false)
-                                .asGrpcFor(REMOVED_TOKEN)),
-                info.getTokenRelationshipsList());
+        // We no more return token association details in the response
+        assertEquals(Collections.emptyList(), info.getTokenRelationshipsList());
     }
 
     @Test
